--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "doc": "docs"
   },
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server --open",
-    "server" : "node ./server/dev-server.js",
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack-dev-server webpack.dev.js",
+    "server": "node ./server/dev-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,13 +27,21 @@
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
     "express": "^4.16.4",
     "html-webpack-plugin": "^3.2.0",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-middleware": "^3.6.2",
-    "webpack-dev-server": "^3.3.0"
+    "webpack-dev-server": "^3.3.0",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "eslint-config-standard": "^12.0.0"
